# minimum-qt-for-python-desktop-application-demo

./: .gitignore  LICENSE  README.md  cli-demo.spec  desktop-demo.spec  pyproject.toml
src/minimum_qt_for_python_desktop_application_demo/: __init__.py  log.py
src/minimum_qt_for_python_desktop_application_demo_desktop/: main.py
src/minimum_qt_for_python_desktop_application_demo_desktop/ui/: __init__.py  main_window.py  main_window.ui
src/minimum_qt_for_python_desktop_application_demo_desktop/ui_model/: __init__.py  main_window_model.py
