[project]
name = "minimum-qt-for-python-desktop-application-demo"
version = "1.0.0"
description = "Minimum Qt for Python Desktop Application Demo"
authors = [
    {name = "Johann Chang", email = "johann.chang@outlook.com"},
]
dependencies = [
    "PySide6>=6.6.1",
]
requires-python = ">=3.11, <3.13"
readme = "README.md"
license = {text = "MPLv2"}
