[project]
name = "minimum-qt-for-python-desktop-application-demo"
version = "1.0.0"
description = "Minimum Qt for Python Desktop Application Demo"
authors = [
    {name = "Johann Chang", email = "johann.chang@outlook.com"},
]
dependencies = [
    "PySide6>=6.6.1",
]
requires-python = ">=3.11, <3.13"
readme = "README.md"
license = {text = "MPLv2"}

[project.scripts]
desktop-app = "minimum_qt_for_python_desktop_application_demo_desktop.main:main"
